css/styles.css
body{
    background: url("images/imag.jpg");
}

h1{
    margin-left: 60%;
    font-size: 100px;
}


section{
    display: flex;
    width: 100px;
}

img{
    width: auto;
    height: 50%;
    border-radius: 100%;
}

div p{
    float: right;
    font-size: 30px;
    text-align: center;
    line-height: 50px;
    font-style: italic;
    background-color: #f3f2ed;
    margin: 10px 40px;
    padding: 50px 25px;
    height: 200px;
}

div p:hover{
    color: chartreuse;
    text-shadow: 5%;
}

ul{
    display: flex;
    justify-content: space-between;
    width: 50%;
    list-style-type: none;
    margin: 0 auto;
    margin-bottom: 20px;
}

ul li a{
    text-decoration: none;
    color: palevioletred;
    font-size: 25px;
}

li a:hover{
    color: #240912;
    background-color: #dee3de;
    padding: 10px;
}

